[package]
name = "skcn"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.4",features=["json"]}
tokio = { version = "1.33.0", features = ["full"] }
rocket_cors = "0.6.0-alpha3"
dotenvy = "0.15.7"
bcrypt = "0.15.0"
jsonwebtoken = "9.1.0"
uuid ={ version = "1.5.0",features=["v4"]}
chrono = "0.4.31"
tokio-cron-scheduler = "0.9.4"

